html overflow is fixed, next step position hamburger menu and finish header

--- a/css/homepage.scss
+++ b/css/homepage.scss
@@ -10,7 +10,9 @@
   justify-content: center;
   margin-left: auto;
 }
+
 .nav {
+  position: absolute;
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -18,6 +20,7 @@
   margin-right: 1rem;
 }
 .nav-ul {
+  position: relative;
   margin: 0;
   padding: 0;
 }
@@ -50,4 +53,5 @@
 }
 .video {
   align-content: center;
+  width: 100%;
 }
