--- a/css/main.scss
+++ b/css/main.scss
@@ -3,11 +3,15 @@
 @import "https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,300;0,400;0,600;0,700;0,800;1,300;1,400;1,600;1,700;1,800&display=swap";
 // font-family: "Open Sans", sans-serif;
 
+html {
+  overflow-x: hidden;
+}
 body {
   margin: 3rem;
   margin-bottom: 0;
   background-color: rgba(18, 8, 40, 1);
   color: rgba(255, 229, 207, 1);
+  overflow-x: hidden;
 }
 a {
   color: rgba(255, 229, 207, 1);
